--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "joi": "^17.12.0",
     "mongoose": "^8.1.0"
   },
   "devDependencies": {
